# pcml

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  package.xml
config/: kinect2_skeleton.yaml
data/: s1.txt  s2.txt  s3.txt  s4.txt
include/: .gitignore
include/pcml/data/: cad120_reader.h  kinect2_skeleton_stream.h  kinect_skeleton_stream.h  skeleton_stream.h
include/pcml/feature/: joint_motion_feature.h
include/pcml/kalman_filter/: points_kalman_filter.h
include/pcml/learning/: spgp.h  train_future_motion.h
include/pcml/util/: future_obstacle_listener.h
launch/: future_obstacle_publisher.launch  kinect2_obstacle_publisher.launch  recorded_obstacle_publisher.launch  test_cad120.launch
launch/rviz/: test_cad120.rviz
model1/: config.yaml  log.txt  models.yaml
model2/: metadata.yaml
msg/: FutureObstacleDistribution.msg  FutureObstacleDistributions.msg
spgp_data/: plot_output.m  test_outputs
src/: .gitignore  future_obstacle_publisher.cpp  future_obstacle_visualizer.cpp  infer_cad120.cpp  kinect2_obstacle_publisher.cpp  kinect_frequency.cpp  kinect_obstacle_publisher.cpp  recorded_obstacle_publisher.cpp  test_cad120.cpp  test_skeleton_stream.cpp  test_spgp.cpp  train.cpp  train_cad120.cpp  train_had.cpp  virtual_human_publisher.cpp
src/data/: cad120_reader.cpp  kinect2_skeleton_stream.cpp  kinect_skeleton_stream.cpp  skeleton_stream.cpp
src/feature/: joint_motion_feature.cpp
src/kalman_filter/: points_kalman_filter.cpp
src/learning/: spgp.cpp  train_future_motion.cpp
src/util/: future_obstacle_listener.cpp
